@@ -2,6 +2,18 @@
 
         Reviewed by Oliver Hunt.
 
+        Renamed heapRootMarker to heapRootVisitor to match its class name
+        https://bugs.webkit.org/show_bug.cgi?id=61584
+
+        * heap/Heap.cpp:
+        (JSC::Heap::markProtectedObjects):
+        (JSC::Heap::markTempSortVectors):
+        (JSC::Heap::markRoots):
+
+2011-05-26  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+
         Removed some interdependency between Heap and SmallStrings by simplifying
         the SmallStrings lifetime model
         https://bugs.webkit.org/show_bug.cgi?id=61579
